src/App.css
html,
body,
ul {
  margin: 0;
  padding: 0;
  font-family: "Oswald", sans-serif;
}
ul {
  list-style: none;
}
.landing-page {
  display: grid;
  grid-template-rows: repeat(8, 1fr);
  grid-template-columns: repeat(16, 1fr);
  column-gap: 1rem;
  row-gap: 1rem;
  width: 100vw;
  height: 100vh;
}
.banner {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 20vh;
  font-size: 3rem;
}
.wayo-logo {
  grid-area: 1 / 8 / span 3 / span 3;
  width: 10rem;
  height: 10rem;

  object-fit: cover;
  object-position: 50% 50%;
}
.cta-hash-tag {
  grid-area: 1 / 2 / span 1 / span 3;
  grid-row-start: 2;
}
.shoe-brand {
  grid-area: 2 / 2 / span 2 / span 3;
  font-size: 3rem;
  font-weight: 600;
  grid-row-start: 3;
}
.shoe-specifications {
  grid-area: 4 / 2 / span 2 / span 6;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  grid-row-start: 5;
}
.shoe-size-guide {
  display: flex;
  flex-direction: column;
}
.shoe-size-guide > div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0.3rem 0;
  width: 35vh;
}
.shoe-material {
  grid-area: 6 / 2 / span 1 / span 3;
}
.cta-controls {
  grid-area: 6 / 2 / span 2 / span 3;
  grid-row-start: 7;
}

.landing-page-image-1 {
  grid-area: 1 / 7 / span 8 / span 10;
  width: 62.1vw;
  height: 100vh;
  object-fit: cover;
  object-position: 0 0;
  -webkit-clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
  clip-path: polygon(50% -60%, 100% 0%, 100% 100%, 0% 100%);
}

.slider {
  /* background: url("./assets/images/Men/Wayo_FootWear-213.jpg") no-repeat; */
  background-size: cover;
  height: 100vh;
  grid-area: 1 / 1 / span 12 / span 12;
}
.slider-details {
  height: 22vh;
  grid-area: 8 / 1 / span 2 / span 12;
  background-color: rgba(23, 22, 21, 0.72);
  z-index: 1000;
}
.slider-details > ul {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  align-items: center;
  color: white;
  list-style: none;
}
.shoe-size {
  font-size: 6rem;
}

.main-content {
  padding: 2rem;
}
.main-content {
  padding: 2rem;
  width: 75vw;
  margin: auto;
}

.snap-y {
  /* overflow: scroll;
  overflow-x: hidden;
  height: 100vh;
  scroll-snap-type: y mandatory; */
}

.snap-content {
  /* scroll-snap-align: start;
  height: 100vh; */
}

.shoes-display {
  display: grid;
  grid-template-columns: 25% auto;
  justify-content: space-btween;
  margin: 4rem 0;
}
.shoe-category {
  border-right: 1px solid;
  margin: 1em 0;
  padding: 2rem 4rem;
}
.shoes-slider {
  list-style: none;
  overflow: hidden;
  /* margin-top: 4em; */
  padding: 2rem;
}
.item {
  background-clip: green;
}

.cta-container {
  display: flex;
  justify-content: space-between;
  padding-right: 0;
}

.cta-gallery {
  margin-right: -5%;
  border-bottom: 3px solid black;
}

.cta-hash-tag {
  padding-left: 5%;
}

/* .shoe-category-details {
  background-color: lightgray;
  padding: 20px;
  width: 200px;
  height: 200px;
} */

.shoe-category > span {
  border: 1px solid;
  height: 20px;
  width: 20px;
  display: flex;
  align-content: center;
  justify-content: center;
  border-radius: 0%;
  padding: 5px 10px 10px 10px;
}

.steps-to-order {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  /* height: ; */
  /* font-size: 3rem; */
}
.steps-to-order > h4 {
  font-size: 2rem;
}
.steps {
  /* display: flex;
  flex-direction: row; */
  margin: 1rem;
  /* border: 2px solid; */
  text-align: center;
  /* height: 45vh; */
  width: 23vw;
  /* height: 45vh; */
}
.steps > h4 {
  font-size: 2rem;
}
.how-to-order {
  display: flex;
  flex-direction: row;
}
.steps-icon {
  width: 6rem;
  height: 6rem;
  border: 1px solid;
  margin: auto;
}

.footer {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 45vh;
  color: #f1f1f1;
  background: url("./assets/images/footer-bg.png") repeat-y;
}

.social {
  display: flex;
  justify-content: space-between;
  width: 10vw;
}

#myImg {
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s;
}

#myImg:hover {
  opacity: 0.7;
}

.gallery-container {
  list-style: none;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  grid-template-rows: repeat(6, 200px);
  grid-auto-flow: dense;
}

.gallery-container > li:nth-child(n) {
  grid-column: span 2;
  grid-row: span 2;
}

/* This will create 3x images every 8 elements */

.gallery-container > li:nth-child(2n) {
  grid-column: span 4;
  grid-row: span 4;
}

.gallery-image {
  margin: 5px;
}
.gallery-image > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.gallery-image > img:hover {
  opacity: 0.5;
  cursor: pointer;
}

.images-container {
  background: "#80808014";
  width: 720px;
  padding: 10px;
}

.image-gallery {
  font-size: 2.2rem;
  font-weight: 100;
  text-align: center;
  padding: 0;
  color: #359dfb;
  padding: 10px;
  display: inline-block;
}
.image-gallery:hover {
  opacity: 0.4;
  cursor: pointer;
}
.close-gallery {
  color: black;
  fontweight: bold;
  position: absolute;
  padding: 10px;
  left: 90%;
  top: 2%;
}
.close-gallery:hover {
  cursor: pointer;
}

.next-image {
  position: absolute;
  left: 100%;
  top: 50%;
}
.previous-image {
  position: absolute;
  top: 50%;
  right: 100%;
}

